Update toolchain